# chinese-chess-ai

./: .gitignore  CLAUDE.md  INTERFACES.md  README.md  pyproject.toml
.claude/: settings.json
configs/: b_loop.yaml  default.yaml  v2_rl.yaml
cpp/: CMakeLists.txt  README.md
cpp/bindings/: module.cpp
cpp/include/xq/: position.h  search.h  types.h  zobrist.h
cpp/src/: eval.cpp  perft_main.cpp  position.cpp  search.cpp  xqab_main.cpp
cpp/tests/: test_perft.cpp  test_rules.cpp
docx/: Git与GitHub上手引导.md  gitignore模板.txt  yaoqiu.txt  中国象棋AI课程设计_最终方案_综合版.md  最终实验方案_实验内容_报告框架_v2.md  棋力提升_最终结论.md  棋力提升一周方案_v3.md  汇报讲稿_v1.md  课程设计报告_初稿.md  进度自动保存.md
scripts/: b_sidecar.sh  bench_selfplay.py  build_flat_memmap.py  calibrate_wdl.py  diag_eval.py  download_data.sh  eval_anchor.py  eval_anchor_vec.py  eval_final.py  eval_loop.py  eval_vs_ref.py  fig_anchor_final.py  fig_curves.py  fig_diagrams.py  fig_monitor.py  finalize_env.sh  finalize_env2.sh  finalize_env3.sh  finalize_env5.sh  finalize_env6.sh  games_to_positions.py  gate.py  gen_pikafish_data.py  gen_positions.py  gen_v2_loop.sh  health_check.sh  label_service.py  make_curves.py  one_match.py  prepare_data.py  pretrain.py  probe_forgetting.py  probe_vs_random.py  relabel_flat.py  run_baseline_d2.sh  run_pipeline.sh  run_value_safe.sh  run_value_safe_v2.sh  safe_kill.sh  save_progress.sh  (+7 more)
xqai/: __init__.py  _smoke_arena_vec.py  _smoke_encoding.py  _smoke_network.py  _smoke_pipeline.py  arena.py  arena_vec.py  config.py  dummynet.py  encoding.py  mcts.py  network.py  replay.py  selfplay.py  train.py
